--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -17,6 +17,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>rest</servlet-name>
-        <url-pattern>/api</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 </web-app>
